--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Daily Goals</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="container">
+<script>
+if (!sessionStorage.getItem("loggedIn")) {
+  window.location.href = "login.html";
+}
+</script>
 
-  <!-- LEFT SIDE -->
-  <div class="left">
-    <img src="illustration.png" alt="Daily Goals Illustration">
-  </div>
+<nav>
+  <a href="index.html">Daily Goals</a>
+  <a href="streaks.html">My Streaks</a>
+  <a href="progress.html">Activity</a>
+  <a href="timeline.html">Timeline</a>
+  <a href="background.html">Background</a>
+  <a href="#" onclick="logout()">Logout</a>
+</nav>
 
-  <!-- RIGHT SIDE -->
-  <div class="right">
-    <h1>Daily Goals</h1>
-    <p class="subtitle">Simple Habit Tracker for Students</p>
+<h1>Daily Goals</h1>
+<p>Simple Habit Tracker for Students</p>
 
-    <div class="card">
-      <label>Email</label>
-      <input type="email" placeholder="Your email">
-
-      <label>Password</label>
-      <input type="password" placeholder="Your password">
-
-      <button>Continue →</button>
-    </div>
-  </div>
-
+<div class="goal-box">
+  <input type="text" id="goalInput" placeholder="Enter today's goal">
+  <button onclick="addGoal()">Add Goal</button>
 </div>
+
+<ul id="goalList"></ul>
+
+<script src="script.js"></script>
+<script>
+function logout() {
+  sessionStorage.removeItem("loggedIn");
+  window.location.href = "login.html";
+}
+</script>
 
 </body>
 </html>
