--- a/streaks.html
+++ b/streaks.html
@@ -6,27 +6,16 @@
 </head>
 <body>
 
-<nav class="navbar">
-  <span class="logo">Daily Goals</span>
-  <div>
-    <a href="index.html">Home</a>
-    <a href="streaks.html">My Streaks</a>
-    <a href="progress.html">Activity</a>
-    <a href="timeline.html">Timeline</a>
-    <a href="background.html">Background</a>
-  </div>
+<nav>
+  <a href="index.html">Home</a>
 </nav>
 
-<div class="container">
-  <h1>My Streaks</h1>
+<h1>My Streaks</h1>
 
-  <div class="cards">
-    <div class="card">Daily Streak <b>3</b></div>
-    <div class="card">Weekly Streak <b>20</b></div>
-    <div class="card">Monthly Streak <b>200</b></div>
-    <div class="card">Yearly Streak <b>2219</b></div>
-  </div>
-</div>
+<div class="card">Daily: <b>3</b></div>
+<div class="card">Weekly: <b>20</b></div>
+<div class="card">Monthly: <b>200</b></div>
+<div class="card">Yearly: <b>2219</b></div>
 
 </body>
 </html>
