--- a/login.html
+++ b/login.html
@@ -1,47 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Daily Goals</title>
+  <title>Login – Daily Goals</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="login-body">
+<body>
 
 <div class="login-container">
 
+  <!-- 🔹 Left side: Text + Image -->
   <div class="login-left">
     <h1>Daily Goals</h1>
-    <p class="subtitle">Simple Habit Tracker for Students</p>
+    <p>Simple Habit Tracker for Students</p>
+
+    <!-- ✅ Image added here -->
+    <img src="illustration.png" alt="Daily Goals Illustration" class="login-img">
   </div>
 
-  <div class="login-card">
+  <!-- 🔹 Right side: Login form -->
+  <div class="login-right">
     <label>Email</label>
-    <input type="email" id="email" placeholder="your@email.com">
+    <input type="email" placeholder="your@email.com">
 
     <label>Password</label>
-    <input type="password" id="password" placeholder="password">
+    <input type="password" placeholder="password">
 
-    <button onclick="login()">Continue →</button>
-
-    <p id="error" class="error"></p>
+    <button>Continue →</button>
   </div>
 
 </div>
 
-<script>
-function login() {
-  const email = document.getElementById("email").value;
-  const pass = document.getElementById("password").value;
-
-  if (email === "" || pass === "") {
-    document.getElementById("error").innerText = "Please fill all fields";
-    return;
-  }
-
-  sessionStorage.setItem("loggedIn", "true");
-  window.location.href = "index.html";
-}
-</script>
-
 </body>
 </html>
+
